# clue

./: .gitignore  404.html  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  api_runner_printer.py  cli_runner_writer.py  docker-compose.yml  index.html  mise.toml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-gh-pages.yml  lint.yml  release.yml
front/: index.html  index.js  package-lock.json  package.json
front/src/: index.js
scripts/: extract-openapi.py
src/db/: printer.py  writer.py
src/domain/: runner.py
src/domain/ports/: input.py  output.py
src/ui/: adapter.py  api.py  cli.py
src/ui/fastapi/routers/: endpoints.py
