[project]
name = "clue"
version = "0.1.0"
description = "My personal python application template for my work."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20240917",
]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
]
